[package]
name = "psf-rs"
version = "1.1.0"
edition = "2021"
authors = [ "talwat" ]
license = "MIT"
description = "A super simple no_std psf2 parser for rust."
documentation = "https://github.com/talwat/psf-rs"
homepage = "https://github.com/talwat/psf-rs"
repository = "https://github.com/talwat/psf-rs"
readme = "README.md"
categories = ["embedded", "encoding", "parsing", "no-std", "text-processing"]
keywords = ["psf2", "tty", "font", "bitmap", "psf"]