[package]
name = "psf-rs"
version = "2.1.4"
edition = "2021"
authors = [ "talwat" ]
license = "MIT"
description = "A super simple no_std psf2 parser for rust."
documentation = "https://github.com/talwat/psf-rs"
homepage = "https://github.com/talwat/psf-rs"
repository = "https://github.com/talwat/psf-rs"
readme = "README.md"
categories = ["embedded", "encoding", "parsing", "no-std", "text-processing"]
keywords = ["psf2", "tty", "font", "bitmap", "psf"]

[profile.release]
lto = true

[dependencies]
ahash = { "version" = "0.8.6", default-features = false }
hash32 = "0.3.1" # The heapless API is a bit silly.
heapless = "0.8.0"
